Fix "File name too long" when trying to load CoNLL-U string

--- a/.jupyter/custom/custom.css
+++ b/.jupyter/custom/custom.css
@@ -8,3 +8,12 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
+
+.rendered_html td {
+    font-size: x-large;
+    text-align: left; !important
+}
+.rendered_html th {
+    font-size: x-large;
+    text-align: left; !important
+}
